@@ -118,12 +118,17 @@ SC_ENABLE_SHARED
 #------------------------------------------------------------------------
 
 zlib_ok=yes
-AC_CHECK_HEADER([zlib.h],[],[
+AC_CHECK_HEADER([zlib.h],[
+  AC_CHECK_TYPE([gz_header],[],[
     zlib_ok=no
-    echo TODO: Add -I$srcdir/compat/zlib/include to compile lines...
-])
-AC_SEARCH_LIBS([adler32],[z],[],[
+    AC_MSG_WARN([todo: Add -Icompat/zlib/include to compile lines])
+  ],[#include <zlib.h>])],[
     zlib_ok=no
+    AC_MSG_WARN([todo: Add -Icompat/zlib/include to compile lines])
+  ])
+AC_SEARCH_LIBS([deflateSetHeader],[z],[],[
+    zlib_ok=no
+    AC_MSG_WARN([todo: Add compat/zlib to list of things to build])
 ])
 if test $zlib_ok = yes; then
     AC_DEFINE(HAVE_ZLIB, 1, [Is there an installed zlib?])
